# spielwiese

./: README.md
2022-07-07-llvm-orc-jit/: CMakeLists.txt  Makefile  ccompiler.h  common.cpp  common.hpp  index.md  jit.h  main.cc
2022-07-07-llvm-orc-jit/jitcee/: CMakeLists.txt  Compiler.cpp  Compiler.hpp  common.hpp
jitcee_dev/: .clang-format  CMakeLists.txt  build_llvm.txt  macros.cmake
jitcee_dev/jitcee/: CMakeLists.txt  Compiler.cpp  Jit.cpp  Jit.hpp  jitcee.cpp  jitcee.h
jitcee_dev/jitcee_lib/: CMakeLists.txt  Compiler.cpp  Compiler.hpp  Dll_lib.cpp  Dll_lib.hpp  Jit.cpp  Jit.hpp  Jitcee.cpp  Jitcee.hpp  common.hpp
jitcee_dev/simple_test/: CMakeLists.txt  Dll_lib.cpp  Dll_lib.hpp  main.cpp
runtime_compilation/: my_dll.cpp  my_dll_loader.cpp
